fixed songlist not showing correctly on small or single screens

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,7 +1,6 @@
 html {
   display: flex;
   background-color: transparent;
-  height: 100vh;
   align-items: center;
   justify-content: center;
   font-size: 10px;
